[gd_scene load_steps=4 format=2]

[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSelectionPanel/MorphSelectionPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSideCollectionPanel/MorphSideCollectionPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphersSelectionWholeScreenGUI/MorphersSelectionWholeScreenGUI.gd" type="Script" id=3]

[node name="MorphersSelectionWholeScreenGUI" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="MorphSelectionPanel" parent="." instance=ExtResource( 1 )]
margin_right = 960.0
margin_bottom = 540.0

[node name="SideCollectionContainer" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0

[node name="MorphSideCollectionPanel" parent="SideCollectionContainer" instance=ExtResource( 2 )]
margin_left = 960.0
margin_right = 1000.0

[node name="AestheticsContainer" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
